--- a/requirements_win.txt
+++ b/requirements_win.txt
@@ -1,7 +1,5 @@
 PyQt5~=5.15.11
-py2app==0.28.8
-setuptools==70.3.0
 ollama==0.4.7
-pywin32==301
-psutil==5.8.0
+pywin32==308
 pyinstaller==4.5.1
+pywinauto==0.6.8
